k8s/overlays/gcp/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medpharm-server
  namespace: medpharm
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "medpharm-ip"
    networking.gke.io/managed-certificates: "medpharm-cert"
    networking.gke.io/v1beta1.FrontendConfig: "medpharm-frontend"
spec:
  ingressClassName: gce
